--- a/backend.yaml
+++ b/backend.yaml
@@ -44,7 +44,7 @@ spec:
     spec:
       containers:
       - name: ekart-backend
-        image: ekart-backend:latest
+        image: default-route-openshift-image-registry.apps-crc.testing/ekart/ekart-backend:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8000
